@@ -75,6 +75,7 @@ Cyclades
 * Remove 'ARCHIPELAGO_BACKENDS' setting used to distinquish between backends
   that hosted only archipelago backends. Instead allocation is based on which
   disk-templates are enabled in each backend.
+* Implement 'snf-manage server-remove' management command.
 
 Pithos
 ------
